# BizOnAI-OCR

./: .gitignore  LICENSE  README.md  pyproject.toml
bizonai_ocr/: input.py  output.py  pipeline.py  postprocess.py  prompts.py  settings.py  util.py
bizonai_ocr/model/: __init__.py  hf.py  schema.py  util.py  vllm.py
bizonai_ocr/scripts/: cli.py  vllm.py
kdoc_benchmark/: README.md  __main__.py  benchmark.py  repeatdetect.py  tests.py  utils.py
kdoc_benchmark_v2/: README.md
kdoc_benchmark_v2/data/: README.md
