[project]
name = "bizonai-ocr"
version = "0.1.0"
description = "Korean-optimized OCR model that converts documents to markdown or HTML. Fine-tuned from Chandra (Qwen3-VL-8B)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "BizOnAI"}
]
keywords = ["ocr", "pdf", "markdown", "korean", "vlm"]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.0.0",
    "filetype>=1.2.0",
    "markdownify==1.1.0",
    "openai>=2.2.0",
    "pillow>=10.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.24.0",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.1.1",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.8.0,<2.9.0",
    "torchvision>=0.23.0,<0.24.0",
    "transformers>=4.57.0,<4.58.0",
    "vllm>=0.11.0,<0.12.0",
    "accelerate>=1.11.0",
    "aiohttp>=3.13.2",
    "tqdm>=4.66.0",
    "six>=1.16.0",
]

[project.optional-dependencies]
bench = [
    "numpy>=1.24.0",
    "rapidfuzz>=3.0.0",
    "fuzzysearch>=0.7.0",
    "pypdf>=4.0.0",
]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
bizonai-ocr = "bizonai_ocr.scripts.cli:main"
bizonai-ocr-vllm = "bizonai_ocr.scripts.vllm:main"
bizonai-ocr-pipeline = "bizonai_ocr.pipeline:cli"
bizonai-ocr-postprocess = "bizonai_ocr.postprocess:cli"

[tool.setuptools.packages.find]
include = ["bizonai_ocr*", "kdoc_benchmark*"]
